# wb-landing-builder/docs/swagger.json
@@ -366,7 +366,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Применяет JSON-мутацию к указанному проекту после проверки схемы и лимитов.",
+                "description": "Применяет JSON-мутацию (create, update, delete или revert) к указанному проекту после проверки схемы и лимитов.",
                 "consumes": [
                     "application/json"
                 ],
@@ -871,6 +871,9 @@
                 "project_id": {
                     "type": "string"
                 },
+                "public_url": {
+                    "type": "string"
+                },
                 "status": {
                     "$ref": "#/definitions/publishing.PublicationStatus"
                 },
@@ -928,7 +931,7 @@
                     "x-example": "{\"id\":\"header-1\",\"content\":\"Hello World\"}"
                 },
                 "operation": {
-                    "description": "Operation тип операции: create, update или delete.\nRequired: true\nEnum: [create, update, delete]",
+                    "description": "Operation тип операции: create, update, delete или revert.\nRequired: true\nEnum: [create, update, delete, revert]",
                     "allOf": [
                         {
                             "$ref": "#/definitions/storage.OperationType"
@@ -943,12 +946,14 @@
             "enum": [
                 "create",
                 "update",
-                "delete"
+                "delete",
+                "revert"
             ],
             "x-enum-varnames": [
                 "OperationCreate",
                 "OperationUpdate",
-                "OperationDelete"
+                "OperationDelete",
+                "OperationRevert"
             ]
         }
     },
